<resources>
    <string name="app_name">RecomRide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_route">RouteActivity</string>

    <string name="action_settings">登出</string>
    <string name="satisfied">便捷性</string>
    <string name="shortest">安全性</string>
    <string name="personal">舒适性</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="safe_set">更高安全性</string>
    <string name="satisfied_set">更高舒适性</string>
    <string name="comfort_set">更高便捷性</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="go">登录</string>
    <string name="fyp">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="repeat">重复密码</string>
    <string name="next">继续</string>
    <string name="shortt">最短</string>
    <string name="saitisfieda">最满意</string>
    <string name="history">历史记录</string>

</resources>
