<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:layout_marginTop="0dp"
    tools:context=".access.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cv_add"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="328dp"
            android:layout_height="304dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="33dp"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:paddingRight="30dp"
                android:paddingLeft="50dp"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingRight="30dp"
                android:paddingLeft="50dp"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingRight="30dp"
                android:paddingLeft="50dp"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4">

                    <EditText
                        android:id="@+id/et_repeatpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/repeat"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/bt_go2"
                android:layout_width="150dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_shape_2"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/next"
                android:textColor="#2fa881" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignLeft="@id/cv_add"
        android:layout_alignStart="@id/cv_add"
        android:layout_alignTop="@id/cv_add"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginEnd="-5dp"
        android:layout_marginRight="-5dp"
        android:layout_marginTop="-15dp"
        android:src="@drawable/plus_x"
        android:transitionName="loginFab"
        app:fabSize="normal" />

</RelativeLayout>
